fix: add openapi right plurals
