# internal/generated/openapi/routers.go
@@ -78,56 +78,50 @@ func getRoutes(handleFunctions ApiHandleFunctions) []Route {
 		{
 			"GetAccountById",
 			http.MethodGet,
-			"/account/:accountId",
+			"/accounts/:accountId",
 			handleFunctions.AccountAPI.GetAccountById,
 		},
 		{
 			"RegisterAccount",
 			http.MethodPost,
-			"/account/",
+			"/accounts/",
 			handleFunctions.AccountAPI.RegisterAccount,
 		},
 		{
 			"GetPhoneById",
 			http.MethodGet,
-			"/phone/:phoneId",
+			"/phones/:phoneId",
 			handleFunctions.PhoneAPI.GetPhoneById,
 		},
 		{
 			"RegisterPhone",
 			http.MethodPost,
-			"/phone/",
+			"/phones/",
 			handleFunctions.PhoneAPI.RegisterPhone,
 		},
 		{
 			"UpdateFcmToken",
 			http.MethodPut,
-			"/phone/:phoneId",
+			"/phones/:phoneId",
 			handleFunctions.PhoneAPI.UpdateFcmToken,
 		},
 		{
 			"GetSmsById",
 			http.MethodGet,
-			"/sms/:smsId",
+			"/messages/:smsId",
 			handleFunctions.SmsAPI.GetSmsById,
 		},
 		{
 			"SendSms",
 			http.MethodPost,
-			"/sms/",
+			"/messages/",
 			handleFunctions.SmsAPI.SendSms,
 		},
 		{
-			"WebhookDisablePut",
-			http.MethodPut,
-			"/webhook/disable",
-			handleFunctions.WebhooksAPI.WebhookDisablePut,
-		},
-		{
-			"WebhookEnablePut",
-			http.MethodPut,
-			"/webhook/enable",
-			handleFunctions.WebhooksAPI.WebhookEnablePut,
+			"WebhooksPost",
+			http.MethodPost,
+			"/webhooks/",
+			handleFunctions.WebhooksAPI.WebhooksPost,
 		},
 	}
 }
